Project

General

Profile

Actions

Bug #22131

closed

[rbd-nbd] Fedora does not register resize events

Added by Jason Dillaman over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When an image is resized, "/sys/block/nbdX/size" is updated correctly but the associated "/dev/nbdX" will still show the old size. Forcing the kernel to rescan the partition table seems to address this issue. There is also a race condition possible between invalidating the cache and in-flight readahead that can cause a deadlock.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #22172: luminous: [rbd-nbd] Fedora does not register resize eventsResolvedPrashant DActions
Copied to rbd - Backport #22173: jewel: [rbd-nbd] Fedora does not register resize eventsResolvedPrashant DActions
Actions #1

Updated by Jason Dillaman over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22172: luminous: [rbd-nbd] Fedora does not register resize events added
Actions #4

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #22173: jewel: [rbd-nbd] Fedora does not register resize events added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF