rbd-nbd: rescan partition table after image resize event

Fixes: http://tracker.ceph.com/issues/22131
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit db13e4757451b463e7fb65c43247e033f24d45e5)

Conflicts:
	src/tools/rbd_nbd/rbd-nbd.cc : resolved in handle_notify